--- a/css/cat_mh.css
+++ b/css/cat_mh.css
@@ -337,120 +337,53 @@ template {
   display: none;
 }
 
-#header {
-  top: 0px;
-  position: fixed;
-  width: 100%;
-  background-image: linear-gradient(#0077be, #00426d);
-  padding: 16px;
-  z-index: 1030;
+html, body {
+  height: 100%;
 }
 
-nav {
-  position: fixed;
-  margin-top: 175px;
-  width: 334px;
+body {
+  font: 18px verdana, sans-serif;
+  color: #555;
 }
-nav div {
-  background-color: #0073b1;
-  border: 1.5px solid #005381;
-  color: #fff;
-  font-size: 20px;
-  font-weight: 550;
+
+.errorContainer {
+  height: 100%;
   text-align: center;
-  margin: 12px;
-  padding: 8px 12px;
-  cursor: pointer;
-}
-nav div:hover {
-  background-color: #0095e6;
-}
-nav div.selected {
-  background-color: #003a59;
+  font-size: 36px;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
-#content {
-  margin-top: 175px;
-  width: calc(100% - 350px);
-  float: right;
+.loader {
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.redHeader {
-  background-color: #7d3c4a;
-  border: 1.5px solid #5a2934;
-  color: #fff;
-  font: 20px bold, sans-serif;
-  padding: 4px;
-  text-align: center;
-  margin-right: 7.5%;
+.loader span {
+  font-size: 36px;
+  margin: 0 0 80px 0;
 }
 
-.blueHeader {
-  background-color: #0073b1;
-  border: 1.5px solid #005381;
-  color: #fff;
-  font: 20px bold, sans-serif;
-  padding: 4px;
-  text-align: center;
-  margin-right: 7.5%;
+.spinner {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  animation: spin 2s linear infinite;
 }
 
-.dataTables_wrapper {
-  margin-right: 7.5%;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.dataTable {
-  border-bottom: 0 !important;
-  width: calc(100% - 350px);
-  margin-right: 7.5%;
-}
-.dataTable thead {
-  text-align: left;
-  font-family: sans-serif;
-  font-size: 18px;
-}
-.dataTable thead th {
-  padding-left: 10px !important;
-}
-.dataTable thead th:not(:first-child) {
-  border-left: 1px solid black;
-}
-.dataTable td + td {
-  border-left: 1px solid black;
-}
-.dataTable tr + tr td {
-  border-top: 1px solid black;
-}
-
-.summaryTable {
-  border: 1px solid white;
-  table-layout: auto;
-  width: 92.5%;
-  text-align: left;
-}
-.summaryTable thead {
-  background-color: #005381;
-  color: #fff;
-  font: 24px bold, sans-serif;
-}
-.summaryTable thead th {
-  padding: 12px;
-}
-.summaryTable tbody td, .summaryTable tbody th {
-  padding: 12px;
-}
-.summaryTable tbody td:last-child {
-  color: #f00;
-  font-weight: 600;
-}
-.summaryTable tbody tr {
-  font: 18px normal, sans-serif;
-}
-.summaryTable tbody .even {
-  background-color: #e7ebf2;
-}
-.summaryTable tbody .odd {
-  background-color: #cbd5e4;
-}
-
-/*# sourceMappingURL=base.css.map */
+/*# sourceMappingURL=cat_mh.css.map */
