--- a/css/cat_mh.css
+++ b/css/cat_mh.css
@@ -346,24 +346,26 @@ body {
   color: #555;
 }
 
-.errorContainer {
+#apiDetails, #error, #loader, #diagnostic {
+  display: none;
+}
+
+#error {
   height: 100%;
   text-align: center;
   font-size: 24px;
-  display: none;
   align-items: center;
   justify-content: center;
 }
 
-.loader {
+#loader {
   height: 100%;
-  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.loader span {
+#loader span {
   font-size: 36px;
   margin: 0 0 80px 0;
 }
