--- a/css/cat_mh.scss
+++ b/css/cat_mh.scss
@@ -14,24 +14,25 @@ body {
 	font: 18px verdana, sans-serif;
 	color: #555;
 }
-.errorContainer {
+#apiDetails, #error, #loader, #diagnostic {
+	display: none;
+}
+#error {
 	height: 100%;
 	text-align: center;
 	font-size: 24px;
-	display: none;
 	align-items: center;
 	justify-content: center;
 }
 
 // loading indicator
-.loader {
+#loader {
 	height: 100%;
-	display: none;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 }
-.loader span {
+#loader span {
 	font-size: 36px;
 	margin: 0 0 80px 0;
 }
