changed config.json to allow per-project settings specifying which survey(s) the interviews should trigger on and which tests should be included along with language (english/spanish)

--- a/css/cat_mh.css
+++ b/css/cat_mh.css
@@ -346,6 +346,19 @@ body {
   color: #555;
 }
 
+#buttons {
+  height: 8%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#content {
+  height: 92%;
+  display: flex;
+}
+
 #apiDetails, #error, #loader, #diagnostic {
   display: none;
 }
