--- a/css/cat_mh.scss
+++ b/css/cat_mh.scss
@@ -14,6 +14,20 @@ body {
 	font: 18px verdana, sans-serif;
 	color: #555;
 }
+
+#buttons {
+	height: 8%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+#content {
+	height: 92%;
+	display: flex;
+}
+
 #apiDetails, #error, #loader, #diagnostic {
 	display: none;
 }
