--- a/css/cat_mh.scss
+++ b/css/cat_mh.scss
@@ -1,43 +1,9 @@
 // recompile command (in git bash folder):
 //sass.bat css/base.scss css/base.css
 
-@import "C:/xampp/htdocs/redcap/modules/cat_mh_v0.1/css/_normalize.scss";
+@import "_normalize.scss";
 
-// variables
-
-// css
-html, body {
-height: 100%;
-}
-body {
-	// text-align: center;
-	font: 18px verdana, sans-serif;
-	color: #555;
-}
-
-#buttons {
-	height: 8%;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-
-#content {
-	height: 92%;
-	display: flex;
-}
-
-#apiDetails, #error, #loader, #diagnostic {
-	display: none;
-}
-#error {
-	height: 100%;
-	text-align: center;
-	font-size: 24px;
-	align-items: center;
-	justify-content: center;
-}
+// vars
 
 // loading indicator
 #loader {
