--- a/css/cat_mh.scss
+++ b/css/cat_mh.scss
@@ -5,30 +5,83 @@
 
 // vars
 
-// loading indicator
-#loader {
-	height: 100%;
+// elements
+body {
+	font: 18px verdana, sans-serif;
+	
+	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
+	margin-top: 100px;
+	div, span, button, ul {
+		margin: 30px;
+	}
 }
-#loader span {
-	font-size: 36px;
-	margin: 0 0 80px 0;
+ul {
+	list-style: none;
 }
-.spinner {
-	border: 16px solid #f3f3f3;
-	border-top: 16px solid #3498db;
+li {
+	margin-bottom: 10px;
+}
+button {
+	background-color: #2679ff; /* Green */
+	border: none;
+	color: #eee;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+button:hover {
+	background-color: #1e62ce;
+	color: white;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.15);
+}
+button:active {
+	background-color: #174fa8;
+	color: white;
+}
+
+// classes
+.answer {
+	margin-left: 35px;
+}
+.grayText {
+	font: 16px verdana, sans-serif;
+	color: #909090;
+	font-weight: 600;
+}
+.bigText {
+	font-size: 24px;
+	font-weight: 400;
+}
+
+// identified
+#error {
+	display: none;
+}
+#interview {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+}
+#question {
+	font-size: 24px;
+	font-weight: 400;
+}
+#loader {
+	border: 16px solid #e3e3e3; /* Light grey */
+	border-top: 16px solid #3498db; /* Blue */
 	border-radius: 50%;
-	width: 200px;
-	height: 200px;
+	width: 120px;
+	height: 120px;
 	animation: spin 2s linear infinite;
 }
 @keyframes spin {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
