--- a/css/base.scss
+++ b/css/base.scss
@@ -5,10 +5,11 @@
 
 // vars
 
-// elements
-body div {
+// divs/structure
+body > div {
 	* {
 		font-family: "Verdana", sans-serif;
+		// font-weight: 400;
 	}
 	display: flex;
 	flex-direction: column;
@@ -18,9 +19,22 @@ body div {
 	div, span, button, ul {
 		margin: 16px;
 	}
+	color: #5A5A5A;
 }
 #interviewTest, #interviewResults, #error {
 	display: none;
+}
+table {
+	border-collapse: collapse;
+}
+table, th, td, {
+	text-align: left
+}
+th, td {
+	padding: 16px;
+}
+tr:not(:last-child) {
+	border-bottom: 1px solid #ddd;
 }
 ul {
 	list-style: none;
@@ -28,15 +42,23 @@ ul {
 		margin-bottom: 10px;
 	}
 }
+
+// test
 h1 {
-	font-size: 48px;
-	font-weight: 500;
+	font-size: 32px;
 }
 span.interviewLabel {
 	color: #A8A8A8;
 	font-size: 18px;
-	font-weight: 400px;
 }
+.question {
+	font-size: 32px;
+	text-align: center;
+	width: 66%;
+	margin-bottom: 50px;
+}
+
+// buttons
 button {
 	border: none;
 	padding: 16px 24px;
@@ -46,19 +68,21 @@ button {
 	background-color: #737373;
 	color: white;
 }
+button:hover:not(.disabled) {
+	background-color: #0066DF;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+}
 button.disabled {
 	opacity: 0.3;
 }
-button:hover:not(.disabled) {
-	border: none;
-	background-color: #919191;
-}
-button.interviewSelector {
-	border: none;
+.interviewSelector, .answerSelector {
 	width: 12em;
+	background-color: #888888;
 }
-button.interviewSelector:focus {
-	border: none;
+.interviewSelector:focus, .answerSelector:focus {
 	background-color: #0086FF;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.submitAnswer, #interviewResults > button:last-child {
+	margin-top: 16px;
 }
