--- a/css/base.css
+++ b/css/base.css
@@ -348,7 +348,7 @@ body > div {
 body > div * {
   font-family: "Verdana", sans-serif;
 }
-body > div div, body > div span, body > div button, body > div ul {
+body > div div, body > div span, body > div button, body > div ol {
   margin: 16px;
 }
 
@@ -372,10 +372,10 @@ tr:not(:last-child) {
   border-bottom: 1px solid #ddd;
 }
 
-ul {
+ol {
   list-style: none;
 }
-ul li {
+ol li {
   margin-bottom: 10px;
 }
 
@@ -402,6 +402,12 @@ span.loadText {
   margin-bottom: 50px;
 }
 
+#missingInterviewsNote {
+  margin-top: 40px;
+  padding: 20px 150px;
+  border: 1px dotted #A8A8A8;
+}
+
 button {
   border: none;
   padding: 16px 24px;
@@ -421,7 +427,11 @@ button.disabled {
   opacity: 0.3;
 }
 
-.interviewSelector {
+button.completed, button.completed:hover, button.completed:focus {
+  background-color: #00D626;
+}
+
+.interviewSelector:not(.completed) {
   width: 12em;
   background-color: #888888;
 }
@@ -431,7 +441,7 @@ button.disabled {
   background-color: #888888;
 }
 
-.interviewSelector:focus, .answerSelector:focus {
+.interviewSelector:focus:not(.completed), .answerSelector:focus {
   background-color: #0086FF;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
